Finished implementation and wrote demo.

--- a/details.ipynb
+++ b/details.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Details\n",
+    "MORE DETAILS\n",
     "===\n",
     "\n",
     "Credible intervals are an important way to summarize uncertainty, especially in Bayesian inference.\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Simultaneous credible bands for multivariate distributions\n",
+    "Rectangular simultaneous credible regions for multivariate distributions\n",
     "---\n",
     "\n",
     "For multivariate distributions on a high-dimensional space $\\mathbb{R}^d$, one is often interested in regions $C \\subset \\mathbb{R}^d$ that contain a given\n",
@@ -44,7 +44,7 @@
     "\n",
     "If we have samples from a multivariate distribution $p(x)$ on $\\mathbb{R}^d$, we could compute $q$-HDIs $[\\ell_i, u_i]$ for each of the $d$ coordinates $i=1, \\ldots, d$.\n",
     "\n",
-    "However, these coordinate-wise HDIs would not serve us as estimators for credible bands, because the set\n",
+    "However, these coordinate-wise HDIs would not serve us as a credible region, because the set\n",
     "\n",
     "$\n",
     "[\\mathbf \\ell, \\mathbf u] = \\lbrace x \\in \\mathbb{R}^d ~ : ~ \\ell_i \\leq x_i \\leq u_i \\text{ for } i=1,\\ldots, d \\rbrace\n",
@@ -77,31 +77,31 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Estimating simultaneous credible bands\n",
+    "Estimating rectangular simultaneous credible regions\n",
     "---\n",
     "\n",
-    "Because simultaneous credible bands cannot be computed coordinate-wise, they are much more challenging to estimate.\n",
+    "Because simultaneous credible regions cannot be computed coordinate-wise, they are much more challenging to estimate.\n",
     "\n",
-    "In principle, if we have $d$-dimensional samples $x^{(1)}, \\ldots, x^{(N)}$, we could estimate a simultaneous $q$-credible band by computing the\n",
+    "In principle, if we have $d$-dimensional samples $x^{(1)}, \\ldots, x^{(N)}$, we could estimate a rectangular simultaneous $q$-credible region by computing the\n",
     "smallest $d$-dimensional box $[\\ell, u]$ that contains at least $q \\cdot N$ samples. In computational geometry, such a box is called a *minimum-volume\n",
     "axis-aligned bounding box*. The problem is that for high-dimensional samples, finding such a box computationally is a very hard problem.\n",
     "The computation time of existing algorithms usually increases exponentially with the dimension $d$ and polynomially with the number of samples (see ...).\n",
     "\n",
-    "Therefore, in statistics one usually resorts to methods that do not estimate the smallest (i.e. the highest-density) simultaneous credible band,\n",
-    "but simply compute a conservative estimator (i.e. a box that contains at least $q \\cdot N$ samples) that is \"sufficiently small\".\n",
+    "Therefore, in statistics one usually resorts to methods that do not estimate the smallest (i.e. the highest-density) rectangular simultaneous credible region,\n",
+    "but simply compute a conservative estimate (i.e. a box that contains at least $q \\cdot N$ samples) that is \"sufficiently small\".\n",
     "\n",
     "One such method is the widely known algorithm proposed in the article\n",
     "\n",
     "\"Bayesian Computation and Stochastic Systems\" (1995) by J. Besag, P. Green, D. Higdon and K. Mengersen,\n",
     "\n",
-    "also known simply as the *Besag method*. It is a very fast method that yields a conservative estimate of a simultaneous credible band. However,\n",
+    "also known simply as the *Besag method*. It is a very fast method that yields a conservative estimate of a simultaneous credible region. However,\n",
     "one main problem with the Besag method is that in high dimensions the estimate becomes too conservative, to the point where it contains all of\n",
     "the samples and therefore ceases to be useful.\n",
     "\n",
     "The idea behind the method implemented here is to use the probability density function $p(x)$ to obtain information about the geometry of\n",
     "the highest-posterior density regions, and to use this information in constructing an estimate of a simultaneous credible band.\n",
-    "While this method does not yield the minimal-volume axis-aligned bounding box, it yields simultaneous credible bands that are usually\n",
-    "tighter than the ones obtained with the Besag method.\n",
+    "While this method does not yield the minimal-volume axis-aligned bounding box, it yields credible regions that are usually\n",
+    "smaller (\"tighter\") than the ones obtained with the Besag method.\n",
     "\n"
    ],
    "metadata": {
@@ -118,7 +118,7 @@
     "Given a unimodal target probability distribution $p(x)$ on $\\mathbb R^d$, we assume that we have access to the mode $x^*$, a function $g=(x)$ on $\\mathbb R^d$ such that $p(x) \\propto \\exp( - g(x))$ (i.e. $g$ is equal to the negative log-density function, up to an additive constant), and samples $x^{(1]}, \\ldots, x^{(N)} \\sim p(x)$.\n",
     "\n",
     "**Target**\n",
-    "Estimate a simultaneous credible band with given credibility level $\\theta \\in (0,1)$.\n",
+    "Estimate a rectangular credible region with given credibility level $\\theta \\in (0,1)$.\n",
     "\n",
     "**Strategy**:\n",
     "We know that the highest density regions of $p(x)$ are given by the sublevel sets of $g$, i.e. sets of the form $C_\\gamma = \\lbrace x ~ : ~ g(x) \\leq \\gamma \\rbrace$.\n",
