--- a/details.ipynb
+++ b/details.ipynb
@@ -25,7 +25,7 @@
     "One problem with the concept of an HDI is that it might not be unique. However, if the probability distribution $p(x)$ is strongly unimodal, then the HDI is\n",
     "uniquely determined.\n",
     "\n",
-    "In practice, HDIs often have to be estimated from samples. For example, suppose we are given samples $x^{(1)}, \\ldots, x^{(N)}$ from a strongly unimodal distribution. Then we can estimate the $q$-HDI by sorting the samples in ascending order, $x^{[1]} \\leq x^{[2]} \\leq \\ldots x^{[N]}$. If we set $N_q := \\lceil (1 - q) \\cdot N \\rceil$ and $K = \\mathrm{arg}\\min_{k=1,\\ldots, N} (x^{[K+N_\\alpha]} - x^{[K]})$, the interval $[x^{[K]}, x^{[K + N_\\alpha]}]$ is an estimator for the $q$-HDI.\n",
+    "In practice, HDIs often have to be estimated from samples. For example, suppose we are given samples $x^{(1)}, \\ldots, x^{(N)}$ from a strongly unimodal distribution. Then we can estimate the $\\theta$-HDI by sorting the samples in ascending order, $x^{[1]} \\leq x^{[2]} \\leq \\ldots x^{[N]}$. If we set $N_\\theta := \\lceil (1 - \\theta) \\cdot N \\rceil$ and $K = \\mathrm{arg}\\min_{k=1,\\ldots, N} (x^{[K+N_\\alpha]} - x^{[K]})$, the interval $[x^{[K]}, x^{[K + N_\\alpha]}]$ is an estimator for the $\\theta$-HDI.\n",
     "\n"
    ],
    "metadata": {
@@ -35,24 +35,35 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Rectangular simultaneous credible regions for multivariate distributions\n",
+    "Rectangular credible regions for multivariate distributions\n",
     "---\n",
     "\n",
     "For multivariate distributions on a high-dimensional space $\\mathbb{R}^d$, one is often interested in regions $C \\subset \\mathbb{R}^d$ that contain a given\n",
-    "percentage of the probability mass. This applies for example to non-parametric statistics or time-series analysis, where the parameter of interest corresponds to a function $f$ and one wants to estimate a *credible band*, i.e. two functions $\\ell=\\ell(t)$ and $u=u(t)$ with $\\ell(t) < u(t)$ such that $f$ lies between $\\ell$ and $u$\n",
-    "with a given probability.\n",
+    "percentage of the probability mass. Given a probability density function $p(x)$ on $\\mathbb{R}^d$, we say that $C$ is a $\\theta$-credible region, for $\\theta \\in [0, 1]$,\n",
+    "if\n",
     "\n",
-    "If we have samples from a multivariate distribution $p(x)$ on $\\mathbb{R}^d$, we could compute $q$-HDIs $[\\ell_i, u_i]$ for each of the $d$ coordinates $i=1, \\ldots, d$.\n",
+    "$\n",
+    "\\int_C p(x) dx \\geq \\theta.\n",
+    "$\n",
     "\n",
-    "However, these coordinate-wise HDIs would not serve us as a credible region, because the set\n",
+    "Often, one is interested in credible regions that have a prescribed geometry that makes them easier to visualize. The most common of those are *rectangular credible regions*,\n",
+    "which are simply credible regions that can be written in the form $C = \\lbrace x ~ : ~ \\ell \\leq x \\leq u \\rbrace$, where $\\ell$ and $u$ are $d$-dimensional vectors that satisfy $\\ell < u$.\n",
+    "Rectangular credible regions are easy to visualize since they are determined by the lower and upper bounds, and so we can simply plot those in the same way we plot the signal $x$.\n",
+    "\n",
+    "For example, in non-parametric statistics or time-series analysis rectangular credible regions are known as *credible bands*: If the parameter of interest is a discrete signal $(f_t)$, a *credible band* is determined by two discrete functions $\\ell=(\\ell_t)$ and $u=(u_t)$ with $\\ell_t < u_t$ such that $f$ lies between $\\ell$ and $u$ with a given probability. The credible band can then be visualized by plotting $\\ell$ and $u$ alongside with the estimate for $f$.\n",
+    "\n",
+    "\n",
+    "\n",
+    "Estimating rectangular credible regions is not trivial. If we have samples from a multivariate distribution $p(x)$ on $\\mathbb{R}^d$, we could compute $theta$-HDIs $[\\ell_i, u_i]$ for each of the $d$ coordinates $i=1, \\ldots, d$. However, these coordinate-wise HDIs would not serve us as a credible region, because the set\n",
     "\n",
     "$\n",
     "[\\mathbf \\ell, \\mathbf u] = \\lbrace x \\in \\mathbb{R}^d ~ : ~ \\ell_i \\leq x_i \\leq u_i \\text{ for } i=1,\\ldots, d \\rbrace\n",
     "$\n",
     "\n",
-    "will in general not contain $q \\cdot 100$ % of the probability mass of $p$ (see ... for further discussion).\n",
+    "will in general not contain $theta \\cdot 100$ % of the probability mass of $p$ (see e.g. section 4 of Crainiceanu et al. \"Spatially Adaptive Bayesian Penalized Splines With\n",
+    "Heteroscedastic Errors\" (2007)).\n",
     "\n",
-    "For this reason, one usually distinguishes between *marginal* and *simultaneous* credible bands for multivariate distributions.\n",
+    "For this reason, one usually distinguishes between *marginal* (or *pointwise*) and *simultaneous* credible bands for multivariate distributions.\n",
     "\n",
     "A *marginal credible band* with credibility $q$ for a multivariate probability distribution $p(x)$ on $\\mathbb R^d$ is any set $[\\mathbf \\ell, \\mathbf u]$ such that\n",
     "\n",
@@ -60,13 +71,17 @@
     "\\int_{\\ell_i}^{u_i} p(x_1, \\ldots, x_{i-1}, y, x_{i+1}, \\ldots, x_d) d y \\geq q \\qquad \\text{for all } i=1,\\ldots, d.\n",
     "$\n",
     "\n",
-    "In contrast, a *simultaneous credible band*, with credibility $q$, is any set $[\\mathbf \\ell, \\mathbf u]$ such that\n",
+    "In contrast, a *simultaneous credible band*, with credibility $theta$, is any set $[\\mathbf \\ell, \\mathbf u]$ such that\n",
     "\n",
     "$\n",
-    "\\int_{l_1}^{u_1} \\cdots \\int_{l_d}^{u_d} p(x) d x \\geq q.\n",
+    "\\int_{l_1}^{u_1} \\cdots \\int_{l_d}^{u_d} p(x) d x \\geq \\theta.\n",
     "$\n",
     "\n",
     "Computing coordinate-wise HDIs only yields an estimator for a *marginal credible band*, not a simultaneous one.\n",
+    "\n",
+    "Note that rectangular credible regions have sometimes been referred to as\n",
+    "- simultaneous credible bounds, or\n",
+    "- simultaneous credible intervals.\n",
     "\n",
     "\n"
    ],
@@ -77,18 +92,18 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Estimating rectangular simultaneous credible regions\n",
+    "Estimating rectangular credible regions\n",
     "---\n",
     "\n",
-    "Because simultaneous credible regions cannot be computed coordinate-wise, they are much more challenging to estimate.\n",
+    "Because rectangular credible regions cannot be computed coordinate-wise, they are much more challenging to estimate.\n",
     "\n",
-    "In principle, if we have $d$-dimensional samples $x^{(1)}, \\ldots, x^{(N)}$, we could estimate a rectangular simultaneous $q$-credible region by computing the\n",
-    "smallest $d$-dimensional box $[\\ell, u]$ that contains at least $q \\cdot N$ samples. In computational geometry, such a box is called a *minimum-volume\n",
+    "In principle, if we have $d$-dimensional samples $x^{(1)}, \\ldots, x^{(N)}$, we could estimate a rectangular simultaneous $\\theta$-credible region by computing the\n",
+    "smallest $d$-dimensional box $[\\ell, u]$ that contains at least $\\theta \\cdot N$ samples. In computational geometry, such a box is called a *minimum-volume\n",
     "axis-aligned bounding box*. The problem is that for high-dimensional samples, finding such a box computationally is a very hard problem.\n",
     "The computation time of existing algorithms usually increases exponentially with the dimension $d$ and polynomially with the number of samples (see ...).\n",
     "\n",
     "Therefore, in statistics one usually resorts to methods that do not estimate the smallest (i.e. the highest-density) rectangular simultaneous credible region,\n",
-    "but simply compute a conservative estimate (i.e. a box that contains at least $q \\cdot N$ samples) that is \"sufficiently small\".\n",
+    "but simply compute a conservative estimate (i.e. a box that contains at least $\\theta \\cdot N$ samples) that is \"sufficiently small\".\n",
     "\n",
     "One such method is the widely known algorithm proposed in the article\n",
     "\n",
@@ -122,7 +137,7 @@
     "\n",
     "**Strategy**:\n",
     "We know that the highest density regions of $p(x)$ are given by the sublevel sets of $g$, i.e. sets of the form $C_\\gamma = \\lbrace x ~ : ~ g(x) \\leq \\gamma \\rbrace$.\n",
-    "Given samples, we can approximate these regions by discrete sets of the form $\\hat C_\\gamma = \\lbrace x^{(i)} ~ : ~ g(x^{(i)}) \\leq \\gamma$.\n",
+    "Given samples, we can approximate these regions by discrete sets of the form $\\hat C_\\gamma = \\lbrace x^{(i)} ~ : ~ g(x^{(i)}) \\leq \\gamma \\rbrace$.\n",
     "The smallest axis-aligned box $B_\\gamma$ that contains $\\hat C_\\gamma$ can then be computed very simply through min-maxing.\n",
     "However, if $\\hat C_\\gamma$ contains $K$ samples, then $B_\\gamma$ might \"accidentally\" contain more than $K$ samples, since $B_\\gamma \\setminus \\hat C_\\gamma$ might\n",
     "be non-empty. Hence, we have to adjust by finding the smallest $\\gamma$ such that\n",
@@ -151,8 +166,15 @@
     "    4. Set $K$ equal to the number of samples in $B$.\n",
     "8. Return the box $B$.\n",
     "\n",
-    "This algorithm is implemented in `simultaneous_ci/simultaneous_ci.py`.\n"
+    "This algorithm is implemented in `rectangular_cr/drcr.py`.\n"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
    "metadata": {
     "collapsed": false
    }
